--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -131,3 +130,5 @@ dist
 .pnp.*
 
 .vscode
+
+build/
