--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ludolfc",
   "version": "1.0.0",
   "description": "LudolfC programming language",
-  "main": "ludolfc.js",
+  "main": "src/ludolfc.js",
   "scripts": {
-    "test": "jest --ci --testResultsProcessor=jest-junit",
+    "test": "jest",
     "build": "snowpack build"
   },
   "repository": {
@@ -15,6 +15,7 @@
     "ludolf",
     "ludolfc",
     "programming",
+    "learning",
     "kids"
   ],
   "author": "Tomas Tulka (ttulka)",
@@ -25,7 +26,6 @@
   "homepage": "https://github.com/ludolf/ludolfc#readme",
   "devDependencies": {
     "jest": "^29.3.1",
-    "jest-junit": "^15.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
