--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ludolfc",
-  "version": "1.0.0",
+  "version": "0.0.0-alpha1",
   "description": "LudolfC programming language",
-  "main": "src/ludolfc.js",
+  "main": "./dist/ludolfc.js",
   "scripts": {
     "test": "jest",
-    "build": "snowpack build"
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,11 @@
     "url": "https://github.com/ludolf/ludolfc/issues"
   },
   "homepage": "https://github.com/ludolf/ludolfc#readme",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "dist"
+  ],
   "devDependencies": {
     "jest": "^29.3.1",
     "webpack": "^5.75.0",
