--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ludolfc",
-  "version": "0.0.0-alpha12",
+  "version": "1.0.0-beta2",
   "description": "LudolfC programming language",
   "main": "./dist/ludolfc.js",
   "scripts": {
